<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:id="@+id/list_header">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/tv_id"
        android:layout_weight="1"
        android:text="@string/list_header_tv_id"
        android:padding="@dimen/padding_main"
        android:textStyle="normal"
        android:gravity="center"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/tv_name"
        android:layout_weight="3"
        android:text="@string/list_header_tv_name"
        android:padding="@dimen/padding_main"
        android:textStyle="normal"
        android:gravity="center"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/tv_weight"
        android:layout_weight="1"
        android:text="@string/list_header_tv_weight"
        android:padding="@dimen/padding_main"
        android:textStyle="normal"
        android:gravity="center"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/tv_price"
        android:layout_weight="1"
        android:text="@string/list_header_tv_price"
        android:padding="@dimen/padding_main"
        android:textStyle="normal"
        android:gravity="center"
        />

</LinearLayout>