<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_main">

    <LinearLayout
        android:id="@+id/ll_id_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_et"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_height="@dimen/height_of_et"
            android:hint="@string/et_id"
            android:gravity="center"
            android:inputType="number"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_height="@dimen/height_of_et"
            android:hint="@string/et_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_weight_price"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_et"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_id_name">

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/et_weight"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/et_price"
            android:inputType="numberDecimal" />
    </LinearLayout>

</LinearLayout>