<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/status_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_bar"
        app:title="@string/app_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/padding_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/ll_id_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_of_et"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_id"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_height="@dimen/height_of_et"
                android:hint="@string/et_id"
                android:gravity="center"
                android:inputType="number"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_height="@dimen/height_of_et"
                android:hint="@string/et_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_weight_price"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_of_et"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_id_name">

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/et_weight"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/et_price"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_weight_price"
            android:layout_marginTop="@dimen/margin_main"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:layout_marginEnd="@dimen/margin_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_weight_price" />

            <Button
                android:id="@+id/btn_remove_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_remove_db"
                android:backgroundTint="@color/red"
                android:layout_marginStart="@dimen/margin_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_weight_price" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/ll_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_buttons">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include layout="@layout/list_header" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <ListView
            android:id="@+id/lv_items"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_list_header"
            tools:listitem="@layout/list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>